Env for Auth0 Region

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ DESCOPE_MANAGEMENT_KEY=
 #If Auth0 Migration
 AUTH0_TOKEN=
 AUTH0_TENANT_ID=
+AUTH0_REGION=
 
 #If Cognito migration
 AWS_ACCESS_KEY_ID=
