--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 DESCOPE_PROJECT_ID=
 DESCOPE_MANAGEMENT_KEY=
 
-#If Auth0 Migration
+#If Auth0 Migrations
 AUTH0_TOKEN=
 AUTH0_TENANT_ID=
 AUTH0_REGION=
@@ -15,6 +15,8 @@ COGNITO_REGION=
 #If Firebase miration 
 FIREBASE_DB_URL=
 
-
-
-
+#If Ping migration 
+PING_CLIENT_ID=
+PING_CLIENT_SECRET=
+PING_ENVIRONMENT_ID=
+PING_API_PATH=
